force-app/main/default/objects/Opportunity/fields/Approval_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Submitted_Date__c</fullName>
    <label>Approval Submitted Date</label>
    <type>Date</type>
</CustomField>