force-app/main/default/objects/Opportunity/fields/CRM_Finance_System_Populated__c.field-meta.xml
<CustomField>
    <fullName>CRM_Finance_System_Populated__c</fullName>
    <formula>OR(
  ISBLANK(Who_is_the_best_contact_for_the_CRM__c ),
  ISBLANK(Best_contact_for_the_finance_system__c)
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRM &amp; Finance System Populated</label>
    <type>Checkbox</type>
</CustomField>