force-app/main/default/objects/Opportunity/fields/Resourcing_Team_Required__c.field-meta.xml
<CustomField>
    <fullName>Resourcing_Team_Required__c</fullName>
    <label>Resourcing Team Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>