force-app/main/default/objects/Opportunity/fields/Send_Partner_Approval_Today__c.field-meta.xml
<CustomField>
    <fullName>Send_Partner_Approval_Today__c</fullName>
    <formula>CASE(WEEKDAY( Approval_Submitted_Date__c ), 
 

5, Approval_Submitted_Date__c +4,
 

6, Approval_Submitted_Date__c +4,
 

7, Approval_Submitted_Date__c +3, 
 

Approval_Submitted_Date__c +2) = today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Partner Approval Today</label>
    <type>Checkbox</type>
</CustomField>