force-app/main/default/objects/Opportunity/recordTypes/Corporate_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Corporate Opportunity Process</businessProcess>
    <label>Corporate Opportunity</label>
</RecordType>