force-app/main/default/objects/Opportunity/recordTypes/CP_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>CP_Opportunity</fullName>
    <active>true</active>
    <businessProcess>CP Opportunity Process</businessProcess>
    <label>CP Opportunity</label>
</RecordType>