force-app/main/default/objects/Opportunity/validationRules/V3_Resourcing_Team_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>V3_Resourcing_Team_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT($Setup.Org_Wide_Settings__c.Disable_Validation_Rules__c),
RecordType.DeveloperName = &quot;CP_Opportunity&quot;,
ISCHANGED(StageName),
TEXT(StageName) = &apos;Date&apos;,
ISBLANK(TEXT(Resourcing_Team_Required__c))
)</errorConditionFormula>
    <errorDisplayField>Resourcing_Team_Required__c</errorDisplayField>
    <errorMessage>Please ensure that you have answered if the Resourcing Team is Required.</errorMessage>
</ValidationRule>