force-app/main/default/objects/Opportunity/validationRules/V4_Loss_Reason_Required_On_Closed_Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>V4_Loss_Reason_Required_On_Closed_Lost</fullName>
    <active>true</active>
    <errorConditionFormula>AND( $Setup.Org_Wide_Settings__c.Disable_Validation_Rules__c = FALSE,
				ISCHANGED(StageName),
				ISPICKVAL(StageName, &apos;Closed Lost&apos;),
				ISBLANK(TEXT(Loss_Reason__c))  
				)</errorConditionFormula>
    <errorMessage>Please populate &apos;Loss Reason&apos; when Opportunity is moved to Closed Lost.</errorMessage>
</ValidationRule>